<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 Jason Barkes

     Android QB Rating App
     Jason Barkes - http://jbarkes.blogspot.com

     Unless required by applicable law or agreed to in writing, this software is
     provided on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
     either express or implied.
-->

<resources>

    <string name="app_name">QB Calculator</string>
    <string name="app_desc">"QB Rating Calculator by Jason Barkes"</string>
    <string name="app_version">Version 1.2 (#69)</string>
    <string name="app_url">http://jbarkes.blogspot.com/p/android-qb-rating-app.html</string>

    <!-- Tab Names -->
    <string name="title_section_main">Recent</string>
    <string name="title_section_nfl">Statistics</string>

    <!-- Menus -->
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_calculate">Calculate</string>
    <string name="action_reset">Clear</string>
    <string name="action_email">Report</string>

    <string name="action_clear_recents">Clear all</string>
    <string name="action_export_csv">Export to CSV</string>

    <!-- Controls -->
    <string name="label_completions">Completions</string>
    <string name="label_attempts">Attempts</string>
    <string name="label_yards">Passing Yards</string>
    <string name="label_tds">Passing TDs</string>
    <string name="label_ints">Interceptions</string>
    <string name="label_rating">QB Rating</string>
    <string name="label_league">League</string>
    <string name="label_team">Team</string>
    <string name="label_player">Player</string>

    <string name="btn_calc">Calculate</string>
    <string name="completion_percentage_hint">Completion %</string>
    <string name="yards_per_attempt_hint">Yards Per</string>
    <string name="td_percentage_hint">TD %</string>
    <string name="interception_percentage_hint">Int %</string>
    <string name="json_key_completions">completions</string>

    <string-array name="formula_array">
        <item>NFL</item>
        <item>NCAA</item>
        <item>AFL</item>
        <item>CFL</item>
        <item>HS</item>
    </string-array>

    <string-array name="recent_context_menu">
        <item>Open</item>
        <item>Clear all</item>
    </string-array>

</resources>
