<!-- Copyright (C) 2013 Jason Barkes

     Android QB Rating App
     Jason Barkes - http://jbarkes.blogspot.com

     Unless required by applicable law or agreed to in writing, this software is
     provided on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
     either express or implied.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_calculate"
        android:title="@string/action_calculate"
        app:showAsAction="always" />

    <item android:id="@+id/action_reset"
        android:title="@string/action_reset"
        app:showAsAction="always" />

    <item android:id="@+id/action_email"
        android:title="@string/action_email"
        app:showAsAction="always" />

    <item android:id="@+id/action_clear_recents"
        android:title="@string/action_clear_recents"
        app:showAsAction="never" />

    <item android:id="@+id/action_export_csv"
        android:title="@string/action_export_csv"
        app:showAsAction="never" />

</menu>
