<!-- Copyright (C) 2013 Jason Barkes

     Android QB Rating App
     Jason Barkes - http://jbarkes.blogspot.com

     Unless required by applicable law or agreed to in writing, this software is
     provided on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
     either express or implied.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/ic_metal_background_portrait" >

    <ScrollView android:id="@+id/scroll_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/table_stats"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="2dp"
            android:paddingRight="10dp"
            android:stretchColumns="1,2"
            android:measureWithLargestChild="false">

            <TableRow
                android:id="@id/row_league"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/label_league"
                    android:id="@+id/text_league"
                    android:gravity="center_vertical|right"
                    android:layout_marginRight="10dp"
                    android:paddingRight="5dp"
                    android:layout_gravity="center_vertical" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_league"
                    android:layout_span="2"
                    android:layout_column="1"
                    android:textSize="14sp"
                    android:background="@drawable/metal_spinner"
                    android:layout_marginRight="10dp" />

            </TableRow>

            <TableRow
                android:id="@id/row_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/label_team"
                    android:id="@+id/text_team"
                    android:gravity="right"
                    android:layout_marginRight="10dp"
                    android:paddingRight="5dp" />

                <AutoCompleteTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/atv_team"
                    android:textSize="14sp"
                    android:layout_span="2"
                    android:maxLength="36"
                    android:background="@drawable/metal_edit_text"
                    android:autoText="false"
                    android:textColor="#ff000000"
                    android:layout_marginRight="10dp" />

            </TableRow>

            <TableRow
                android:id="@+id/row_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/label_player"
                    android:id="@+id/text_player"
                    android:gravity="right"
                    android:layout_marginRight="10dp"
                    android:paddingRight="5dp" />

                <AutoCompleteTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/atv_player"
                    android:textSize="14sp"
                    android:layout_span="2"
                    android:maxLength="36"
                    android:background="@drawable/metal_edit_text"
                    android:textColor="#ff000000"
                    android:layout_marginRight="10dp" />
            </TableRow>

            <TableRow
                android:id="@id/row_completions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/label_completions"
                    android:id="@+id/labelCompletions"
                    android:gravity="right"
                    android:layout_marginRight="10dp"
                    android:paddingRight="5dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:id="@+id/edit_completions"
                    android:textAlignment="center"
                    android:textIsSelectable="true"
                    android:textSize="14sp"
                    android:enabled="true"
                    android:selectAllOnFocus="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:editable="true"
                    android:maxLength="5"
                    android:ems="5"
                    android:maxEms="5"
                    android:gravity="center"
                    android:background="@drawable/metal_edit_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="(10000000.00%)"
                    android:visibility="invisible"
                    android:id="@+id/text_padding" />
            </TableRow>

            <TableRow
                android:id="@+id/row_attempts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/label_attempts"
                    android:id="@+id/labelAttempts"
                    android:gravity="right"
                    android:layout_marginRight="10dp"
                    android:paddingRight="5dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:id="@+id/edit_attempts"
                    android:textAlignment="center"
                    android:textIsSelectable="true"
                    android:textSize="14sp"
                    android:enabled="true"
                    android:selectAllOnFocus="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:editable="true"
                    android:maxLength="5"
                    android:ems="5"
                    android:maxEms="5"
                    android:gravity="center"
                    android:background="@drawable/metal_edit_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/text_completion_percentage"
                    android:paddingLeft="10dp" />

            </TableRow>

            <TableRow
                android:id="@+id/row_yards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/label_yards"
                    android:id="@+id/label_yards"
                    android:paddingRight="5dp"
                    android:layout_marginRight="10dp"
                    android:gravity="right" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:id="@+id/edit_yards"
                    android:textAlignment="center"
                    android:textIsSelectable="true"
                    android:textSize="14sp"
                    android:enabled="true"
                    android:selectAllOnFocus="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:editable="true"
                    android:maxLength="5"
                    android:ems="5"
                    android:maxEms="5"
                    android:gravity="center"
                    android:background="@drawable/metal_edit_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/text_yards_per_attempt"
                    android:paddingLeft="10dp" />

            </TableRow>

            <TableRow
                android:id="@+id/row_tds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/label_tds"
                    android:id="@+id/labelTDs"
                    android:gravity="right"
                    android:layout_marginRight="10dp"
                    android:paddingRight="5dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:id="@+id/edit_tds"
                    android:textAlignment="center"
                    android:textIsSelectable="true"
                    android:textSize="14sp"
                    android:enabled="true"
                    android:selectAllOnFocus="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:editable="true"
                    android:maxLength="5"
                    android:ems="5"
                    android:maxEms="5"
                    android:gravity="center"
                    android:background="@drawable/metal_edit_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/text_td_percentage"
                    android:paddingLeft="10dp" />

            </TableRow>

            <TableRow
                android:id="@+id/row_ints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/label_ints"
                    android:id="@+id/label_interceptions"
                    android:gravity="right"
                    android:layout_marginRight="10dp"
                    android:paddingRight="5dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:id="@+id/edit_ints"
                    android:textAlignment="center"
                    android:textIsSelectable="true"
                    android:textSize="14sp"
                    android:enabled="true"
                    android:selectAllOnFocus="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:editable="true"
                    android:maxLength="5"
                    android:ems="5"
                    android:maxEms="5"
                    android:gravity="center"
                    android:background="@drawable/metal_edit_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/text_interception_percentage"
                    android:paddingLeft="10dp" />

            </TableRow>

            <TableRow
                android:id="@+id/row_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/label_rating"
                    android:id="@+id/label_rating"
                    android:gravity="right"
                    android:layout_marginRight="10dp"
                    android:paddingRight="5dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:id="@+id/edit_rating"
                    android:textAlignment="center"
                    android:textIsSelectable="true"
                    android:textSize="14sp"
                    android:enabled="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:selectAllOnFocus="true"
                    android:editable="false"
                    android:maxLength="5"
                    android:ems="5"
                    android:maxEms="5"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:background="@drawable/metal_edit_text" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/iv_rating_info"
                    android:src="@drawable/ic_info"
                    android:layout_gravity="left"
                    android:paddingLeft="10dp"
                    android:visibility="invisible" />

            </TableRow>

            <TableRow
                android:id="@+id/row_buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:visibility="gone">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_span="2">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Calculate"
                        android:id="@+id/btn_calc"
                        android:layout_marginLeft="10dp" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Clear"
                        android:id="@+id/btn_clear"
                        android:layout_toRightOf="@+id/btn_calc"
                        android:layout_marginLeft="20dp" />
                </RelativeLayout>

            </TableRow>

        </TableLayout>
    </ScrollView>

</LinearLayout>